--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
               <h1>A step-by-step walk through of your first HTML page</h1>
           </header>
 
-          <div id="author-container">
+<!--           <div id="author-container">
               <img id="author-img" src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000011_1549316247_author-pic.png" alt="author">
               <span id="author-name"><a href="http://blog.codingninjas.in/author/kannumittal/">kannumittal</a></span>
               <span class="slash">&ensp;&ensp;</span>
               <span id="author-topic"><a href="http://blog.codingninjas.in/category/web-development/">Web Development</a></span>
-          </div>
+          </div> -->
 
           <article id="blog-content">
               <div id="blog-image-container">
