--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
               <span id="author-topic"><a href="http://blog.codingninjas.in/category/web-development/">Web Development</a></span>
           </div> -->
 
-          <article id="blog-content">
+<!--           <article id="blog-content">
               <div id="blog-image-container">
                  <div id="views">
                       <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000012_1549316267_signal.png" alt="views">
                       <span><b>Views:</b></span>
                       <span><b>1,137</b></span>
-                  </div>
+                  </div> -->
                   <img src="https://ninjasfiles.s3.amazonaws.com/0000000000001491.png" alt="A walk through first HTML page"/>
               </div>
               <p>
